--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
-
     "swiper": "^11.0.7",
     "web-vitals": "^2.1.4"
   },
@@ -41,6 +40,8 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.19",
+    "postcss-loader": "^8.1.1",
     "tailwindcss": "^3.4.1"
   }
 }
