--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.3",
     "init": "^0.1.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
@@ -43,6 +44,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.19",
     "postcss-loader": "^8.1.1",
+    "react-router-dom": "^6.22.3",
     "tailwindcss": "^3.4.1"
   }
 }
