--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,12 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^2.0.0-beta.2",
+    "body-parser": "^2.0.1",
     "cors": "^2.8.5",
-    "express": "^5.0.0-beta.2",
+    "express": "^5.0.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "mysql2": "^3.9.2",
+    "mysql2": "^3.11.2",
     "nodemon": "^3.1.0"
   }
 }
